Added option to limit the number of concurrent threads